// Copyright 2016, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";
package benchmarks;

option java_multiple_files = true;
option java_package = "io.grpc.benchmarks";
option java_outer_classname = "NewsfeedProtos";

message Post {
    int32 owner_id = 1;
    string content = 2;
    repeated Reaction reactions = 3;
    repeated Comment comments = 4;

    message Reaction {
        int32 owner_id = 1;
        ReactionType type = 2;

        enum ReactionType {
            LIKE = 0;
            LOVE = 1;
            HAHA = 2;
            SAD = 3;
            ANGRY = 4;
        }
    }

    message Comment {
        int32 owner_id = 1;
        string text = 2;
    }
}

message Profile {
    int32 id = 1;
    string name = 2;
    string about = 3;
    bool gender = 4; // <- Not the best idea to use a boolean in practice, but this is an example!
    repeated Post posts = 5;
}

message FriendsList {
    repeated Profile profiles = 1;
}